--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -38,6 +38,7 @@
             android:layout_margin="6dp"/>
     </LinearLayout>
         <ImageView
+            android:id="@+id/Menu"
             android:src="@drawable/baseline_more_horiz_24"
             android:layout_gravity="center"
             android:layout_margin="10dp"
