--- a/app/src/main/res/layout/add_item.xml
+++ b/app/src/main/res/layout/add_item.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:layout_margin="15dp">
+    android:gravity="center">
 
     <LinearLayout
         android:orientation="vertical"
@@ -19,6 +18,7 @@
             android:textSize="19sp"
             android:textColor="@color/white"
             android:background="@color/purple_500"
+            android:elevation="15dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingBottom="8dp"
