--- a/app/src/main/res/drawable/shape_background.xml
+++ b/app/src/main/res/drawable/shape_background.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape
+    android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/white"/>
+    <stroke android:color="@color/purple_500" android:width="3dp"/>
+    <corners android:radius="15dp"/>
 
-    <solid
-        android:color="@color/white"/>
-    <stroke
-        android:color="@color/purple_500"
-        android:width="3dp"/>
-    <corners
-        android:radius="15dp"/>
 </shape>
