--- a/app/src/main/res/layout/add_item.xml
+++ b/app/src/main/res/layout/add_item.xml
@@ -1,66 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    >
+
 
     <LinearLayout
         android:orientation="vertical"
-        android:paddingBottom="15dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="10dp"
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Add Us Inf"
+            android:text="Add the User Information"
+            android:textStyle="bold"
             android:textSize="19sp"
             android:textColor="@color/white"
             android:background="@color/purple_500"
+            android:padding="10dp"
             android:elevation="15dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
         <EditText
             android:id="@+id/userName"
-            android:inputType="textPersonName"
             android:hint="Name"
-            android:padding="15dp"
-            android:background="@drawable/shape_background"
+            android:inputType="textPersonName"
             android:textColor="@color/purple_500"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:background="@drawable/shape_background"
+            android:padding="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <EditText
             android:id="@+id/userNo"
-            android:hint="Mobile No"
-            android:background="@drawable/shape_background"
-            android:padding="15dp"
+            android:hint="Mobile No. "
             android:inputType="phone"
             android:textColor="@color/purple_500"
+            android:background="@drawable/shape_background"
+            android:padding="15dp"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+
+
     </LinearLayout>
-
-
 
 </LinearLayout>
