--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,44 +5,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
     app:cardElevation="8dp"
+    app:cardMaxElevation="5dp"
     android:layout_margin="10dp"
-    app:cardMaxElevation="5dp">
-
+    >
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_weight="1"
-        android:layout_margin="15dp"
-        android:padding="4dp"
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/title"
-            android:layout_margin="6dp"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/subTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/subtitle"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:layout_margin="6dp"/>
-    </LinearLayout>
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_margin="15dp"
+            android:padding="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/mTitle"
+                android:text="Title"
+                android:textColor="@color/black"
+                android:textSize="19sp"
+                android:textStyle="bold"
+                android:layout_margin="6dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/mSubTitle"
+                android:text="SubTitle"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:layout_margin="6dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
         <ImageView
-            android:id="@+id/Menu"
-            android:src="@drawable/baseline_more_horiz_24"
+            android:id="@+id/mMenus"
+            android:src="@drawable/ic_more"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:layout_width="40dp"
             android:layout_height="40dp"/>
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
